Preload map and player spritesheet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Turn-Based RPG in Phaser 3</title>
+  <title>Zombie Apocalypse</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <style>
     html,
